Fix logo and homepage title left alignment

--- a/static/_additional-styles.css
+++ b/static/_additional-styles.css
@@ -478,3 +478,13 @@
 .isrg-project-column-single img {
   max-width: 80%;
 }
+
+@media screen and (max-width: 991.9px) {
+  a.navbar-brand {
+    padding-left: 15px; /* Fix logo alignment */
+  }
+}
+
+#page-title {
+  transform: translateX(-3px); /* Fix slightly offset left edge of font using in the "I" glyph */
+}
